src/test/deca/codegen/invalid/intermediaire2/wrongValue/02negReadInt.deca
// Description:
//  readInt avec l'integer minimum 
//
// Resultats:
//  02negReadInt.expected
// 
// Historique:
//    cree le 10/06/2022

{
    int x = readInt();
}